--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -161,11 +161,12 @@ bind = $kbFileExplorer, exec, app2unit -- $fileExplorer
 bind = Super+Alt, E, exec, app2unit -- nemo
 bind = Ctrl+Alt, Escape, exec, app2unit -- qps
 bind = Ctrl+Alt, V, exec, app2unit -- pavucontrol
+bind = Super+Shift, M, exec, evolution
 
 # Utilities
 bindl = , Print, exec, caelestia screenshot  # Full screen capture > clipboard
 bind = Super+Shift, S, global, caelestia:screenshotFreeze  # Capture region (freeze)
-bind = Super+Shift+Alt, S, global, caelestia:screenshot  # Capture region
+bind = Shift, Print, global, caelestia:screenshot  # Capture region
 bind = Super+Alt, R, exec, caelestia record -s  # Record screen with sound
 bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
 bind = Super+Shift+Alt, R, exec, caelestia record -r  # Record region
@@ -173,7 +174,7 @@ bind = Super+Shift, C, exec, hyprpicker -a  # Colour picker
 
 # Volume
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindl = Super+Shift, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindl = Super+Alt, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ $volumeStep%+
 bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume @DEFAULT_AUDIO_SINK@ $volumeStep%-
 
@@ -182,7 +183,7 @@ bind = Super+Shift, L, exec, systemctl suspend-then-hibernate
 
 # Clipboard and emoji picker
 bind = Super, V, exec, pkill fuzzel || caelestia clipboard
-bind = Super+Alt, V, exec, pkill fuzzel || caelestia clipboard -d
+bind = Super+Shift, V, exec, pkill fuzzel || caelestia clipboard -d
 bind = Super, Period, exec, pkill fuzzel || caelestia emoji -p
 bindl = Ctrl+Shift+Alt, V, exec, sleep 0.5s && ydotool type -d 1 "$(cliphist list | head -1 | cliphist decode)"  # Alternate paste
 
