--- a/hypr/hyprland/animations.conf
+++ b/hypr/hyprland/animations.conf
@@ -1,25 +1,26 @@
 animations {
     enabled = true
 
-    # Animation curves
-    bezier = specialWorkSwitch, 0.05, 0.7, 0.1, 1
-    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
-    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
-    bezier = standard, 0.2, 0, 0, 1
+    # More playful Bezier curves
+    bezier = funIn, 0.25, 1.5, 0.5, 1     # Overshoot effect
+    bezier = funOut, 0.3, 0, 0.5, 1       # Fast-out
+    bezier = bounce, 0.34, 1.56, 0.64, 1  # Bounce-like
+    bezier = smooth, 0.4, 0, 0.2, 1       # Soft ease
+    bezier = dramatic, 0.05, 0.7, 0.1, 1  # Emphasized
 
-    # Animation configs
-    animation = layersIn, 1, 5, emphasizedDecel, slide
-    animation = layersOut, 1, 4, emphasizedAccel, slide
-    animation = fadeLayers, 1, 5, standard
+    # Fun animation configs
+    animation = layersIn, 1, 6, funIn, slide
+    animation = layersOut, 1, 5, funOut, slide
+    animation = fadeLayers, 1, 6, smooth
 
-    animation = windowsIn, 1, 5, emphasizedDecel
-    animation = windowsOut, 1, 3, emphasizedAccel
-    animation = windowsMove, 1, 6, standard
-    animation = workspaces, 1, 5, standard
+    animation = windowsIn, 1, 6, bounce, slidefadevert 10%
+    animation = windowsOut, 1, 4, funOut, slidefadevert 5%
+    animation = windowsMove, 1, 7, smooth
 
-    animation = specialWorkspace, 1, 4, specialWorkSwitch, slidefadevert 15%
+    animation = workspaces, 1, 7, bounce, slidefadevert 15%
+    animation = specialWorkspace, 1, 6, dramatic, slidefadevert 20%
 
-    animation = fade, 1, 6, standard
-    animation = fadeDim, 1, 6, standard
-    animation = border, 1, 6, standard
+    animation = fade, 1, 7, smooth
+    animation = fadeDim, 1, 7, smooth
+    animation = border, 1, 7, smooth
 }
