--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -23,14 +23,14 @@ $blurXray = false
 
 # Shadow
 $shadowEnabled = true
-$shadowRange = 20
+$shadowRange = 10
 $shadowRenderPower = 3
 $shadowColour = rgba($surfaced4)
 
 # Gaps
-$workspaceGaps = 5
-$windowGapsIn = 5
-$windowGapsOut = 5
+$workspaceGaps = 10
+$windowGapsIn = 10
+$windowGapsOut = 10
 $singleWindowGapsOut = 10
 
 # Window styling
@@ -49,7 +49,7 @@ $cursorSize = 24
 
 # ### Keybinds ###
 # Workspaces
-$kbMoveWinToWs = Super+Alt
+$kbMoveWinToWs = Super+Shift
 $kbMoveWinToWsGroup = Ctrl+Super+Alt
 $kbGoToWs = Super
 $kbGoToWsGroup = Ctrl+Super
