--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -172,11 +172,20 @@ bind = Ctrl+Alt, R, exec, caelestia record  # Record screen
 bind = Super+Shift+Alt, R, exec, caelestia record -r  # Record region
 bind = Super+Shift, C, exec, hyprpicker -a  # Colour picker
 
-# Volume
+# # Volume
+# bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindl = Super+Alt, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ $volumeStep%+
+# bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume @DEFAULT_AUDIO_SINK@ $volumeStep%-
+
+# Mute / unmute default output
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl = Super+Alt, M, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindle = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ $volumeStep%+
-bindle = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0; wpctl set-volume @DEFAULT_AUDIO_SINK@ $volumeStep%-
+
+# Volume up/down (unmute first, then change; limit to 100%)
+bindle = , XF86AudioRaiseVolume, exec, sh -c 'wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ ${volumeStep}%+ -l 1.0'
+bindle = , XF86AudioLowerVolume, exec, sh -c 'wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ ${volumeStep}%- -l 1.0'
+
 
 # Sleep
 bind = Super+Shift, L, exec, systemctl suspend-then-hibernate
